--- a/CultureFes/style.css
+++ b/CultureFes/style.css
@@ -11,8 +11,6 @@
     font-family: 'Lato', sans-serif;
 }
 
-/* HEADER STYLES */
-
 .wrapper {
     width: 1350px;
     margin-inline: auto;
@@ -20,32 +18,21 @@
 
 header {
     width: 100%;
-    height: 100vh;
+    height: 10vh;
     background-color: transparent;
+    position: fixed;
+    z-index: 10;
     transition: all 0.3s ease-in-out;
-    position: relative;
-    box-shadow: 0px 1px 20px #2e3644;
-}
-
-header video {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    inset: 0;
-    z-index: -1;
-    object-fit: cover;
-    filter: brightness(90%);
 }
 
 nav {
-    width: inherit;
-    height: 10vh;
+    width: 100%;
+    padding: 1rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
     transition: all 0.3s ease-in-out;
     background-color: rgba(46,54,68, 0.2);
-    position: fixed;
 }
 
 nav:hover {
@@ -54,10 +41,7 @@ nav:hover {
 
 nav ul {
     display: flex;
-    column-gap: 1rem;
-}
-
-nav ul li {
+    gap: 1.5rem;
     list-style: none;
 }
 
@@ -73,23 +57,39 @@ nav ul li a:hover {
     color: #f7bdce;
 }
 
+
 .hero {
-    position: absolute;
-    left: 280px;
-    top: 350px;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+.video-container {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    box-shadow: 0px 5px 10px #2e3644;
+}
+
+.video-container video {
+    width: 100%;
+    object-fit: contain;
+    object-position: center;
+    filter: brightness(90%);
 }
 
 .title {
-    text-align: center;
+    position: absolute;
+    top: 24rem;
+    left: 28rem;
     font-size: 7rem;
+    z-index: 2;
     font-weight: bold;
     color: #2e3644;
     text-shadow: 0px 0px 20px #fbab9d;
 }
 
-/* END OF HEADER STYLES */
 
-/* MAIN STYLES */
 
 main {
     font-size: 1.5rem;
@@ -126,8 +126,9 @@ strong {
 
 section {
     scroll-margin: 110px;
-    padding: 2rem 0px;
 }
+
+
 
 .events h2 {
     text-align: center;
@@ -200,6 +201,13 @@ table td {
     background-color: rgba(46,54,68,0.7);
 }
 
+.map {
+    margin-bottom: 2rem;
+    width: 100%;
+    /* style="margin-left: 24rem; border-radius: 10px;" */
+}
+
+
 .FAQ h2 {
     margin: 30px 0px;
 }
@@ -207,6 +215,8 @@ table td {
 .Contact h2 {
     margin-bottom: 2rem;
 }
+
+
 
 form {
     width: 400px;
@@ -254,9 +264,10 @@ button:hover {
     color: #fbab9d;
 }
 
-/* END OF MAIN STYLES */
 
-/* FOOTER STYLES */
+
+
+
 footer {
     width: 100%;
     padding: 1rem;
@@ -264,9 +275,50 @@ footer {
 }
 
 footer p {
-    font-size: 2.5rem;
+    font-size: 1rem;
     color: white;
-    font-weight: bold;
-    letter-spacing: 2rem;
     text-align: center;
+}
+
+
+
+
+
+@media screen and (max-width: 1024px) {
+    .title {
+        position: absolute;
+        top: 13rem;
+        left: 8rem;
+        font-size: 5rem;
+    }
+
+    .hero {
+        height: 100%;
+    }
+
+    main {
+        font-size: 1.2rem;
+        padding: 1rem;
+    }
+
+    .wrapper {
+        width: 1000px;
+    }
+
+    .video-container {
+        margin-bottom: -5px;
+    }
+
+    h2 {
+        margin: 1rem 0px;
+    }
+
+    .faq-container {
+        width: 90%;
+        margin-inline: auto;
+    }
+
+    .faq-container ul li {
+        font-size: 1.2rem;
+    }
 }
