--- a/CultureFes/style.css
+++ b/CultureFes/style.css
@@ -219,9 +219,9 @@ table td {
 form {
     width: 400px;
     padding: 1rem;
-    margin-inline: auto;
     border: 2px solid #fbab9d;
     box-shadow: 0px 1px 30px #2e3644;
+    margin-right: 300px;
 }
 
 
