--- a/CultureFes/style.css
+++ b/CultureFes/style.css
@@ -154,6 +154,8 @@ section {
 
 .event-container h3 {
     font-size: 2rem;
+    color: #fbab9d;
+    text-shadow: 0px 0px 5px #2e3644;
 }
 
 .event-container div {
