--- a/CultureFes/style.css
+++ b/CultureFes/style.css
@@ -81,14 +81,14 @@ nav ul li a:hover {
 }
 
 .title {
-    position: absolute;
+   position: absolute;
     top: 24rem;
     left: 28rem;
     font-size: 7rem;
     z-index: 2;
     font-weight: bold;
     color: #2e3644;
-    text-shadow: 0px 0px 20px #fbab9d;
+    text-shadow: 0px 0px 20px #fbab9d; 
 }
 
 /* MAIN STYLES */
@@ -287,6 +287,12 @@ button:hover {
 
 .socials img {
     width: 100px;
+}
+
+audio {
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
 /* FOOTER STYLES */
